Naming strategies, citation fixes, other corrections and updates.
Signed-off-by: Martin Grebac <martin.grebac@oracle.com>

--- a/spec/references.bib
+++ b/spec/references.bib
@@ -4,7 +4,34 @@
 %% Created for Martin Grebac at 2014-11-11 19:05:26 +0100 
 %% Saved with string encoding Unicode (UTF-8) 
 
-@techreport{json,
+@techreport{rfc2119,
+	Annote = {http://tools.ietf.org/html/rfc2119},
+	Author = {Scott Bradner},
+	Institution = {IETF},
+	Month = {March},
+	Title = {Key words for use in RFCs to Indicate Requirement Levels},
+	Type = {{RFC}},
+	Year = {1997}}
+
+@techreport{rfc3986,
+	Author = {T. Berners-Lee and R. Fielding and L. Masinter},
+	Institution = {IETF},
+	Month = {January},
+	Note = {See http://www.ietf.org/rfc/rfc3986.txt},
+	Title = {{RFC} 3986: {Uniform} {Resource} {Identifier} ({URI}): {Generic} {Syntax}},
+	Type = {{RFC}},
+	Year = 2005}
+
+@techreport{rfc4627,
+	Annote = {http://tools.ietf.org/html/rfc4627},
+	Author = {Douglas Crockford},
+	Institution = {IETF},
+	Month = {July},
+	Title = {The application/json Media Type for JavaScript Object Notation (JSON)},
+	Type = {{RFC}},
+	Year = {2006}}
+
+@techreport{rfc7159,
 	Annote = {http://tools.ietf.org/html/rfc7159},
 	Author = {T. Bray, Ed.},
 	Date-Added = {2014-11-11 17:58:34 +0000},
@@ -17,17 +44,15 @@
 	Year = {2014}}
 
 @techreport{jsonwikipedia,
-	Date-Added = {2014-11-11 17:52:10 +0000},
-	Date-Modified = {2014-11-11 17:58:30 +0000},
 	Institution = {Wikipedia},
-	Month = {November},
-	Url = {http://en.wikipedia.org/wiki/JSON},
-	Year = {2014}}
+	Title = {{JSON}},
+	Note = {See http://en.wikipedia.org/wiki/JSON},
+	Type = {Web Site}}
 
 @techreport{restwikipedia,
 	Institution = {Wikipedia},
-	Note = {See http://en.wikipedia.org/wiki/Representational\_State\_Transfer},
 	Title = {{Representational} {State} {Transfer}},
+	Note = {See http://en.wikipedia.org/wiki/Representational\_State\_Transfer},
 	Type = {Web Site}}
 
 @techreport{rest,
@@ -43,24 +68,6 @@
 	Title = {{REST} {Wiki}},
 	Type = {Web Site}}
 
-@techreport{jaxb20,
-	Author = {Joseph Fialli and Sekhar Vajjhala},
-	Institution = {JCP},
-	Month = {August},
-	Note = {See http://jcp.org/en/jsr/detail?id=222},
-	Title = {The {Java} {Architecture} for {XML} {Binding} ({JAXB}) 2.0},
-	Type = {{JSR}},
-	Year = 2003}
-
-@techreport{uri,
-	Author = {T. Berners-Lee and R. Fielding and L. Masinter},
-	Institution = {IETF},
-	Month = {January},
-	Note = {See http://www.ietf.org/rfc/rfc3986.txt},
-	Title = {{RFC} 3986: {Uniform} {Resource} {Identifier} ({URI}): {Generic} {Syntax}},
-	Type = {{RFC}},
-	Year = 2005}
-
 @techreport{javalang,
 	Author = {James Gosling and Bill Joy and Guy Steele and Gilad Bracha},
 	Institution = {Sun Microsystems, Inc},
@@ -68,6 +75,15 @@
 	Title = {The {Java} {Language} {Specification} - Second Edition},
 	Type = {{Book}},
 	Year = 2000}
+
+@techreport{jsr222,
+	Author = {Kohsuke Kawaguchi},
+	Institution = {JCP},
+	Month = {December},
+	Note = {See http://jcp.org/en/jsr/detail?id=222},
+	Title = {The {Java} {Architecture} for {XML} {Binding} ({JAXB})},
+	Type = {{JSR}},
+	Year = 2009}
 
 @techreport{jsr250,
 	Author = {Rajiv Mordani},
@@ -78,7 +94,7 @@
 	Type = {{JSR}},
 	Year = 2005}
 
-@techreport{bv11,
+@techreport{jsr349,
 	Author = {Emmanuel Bernard},
 	Institution = {JCP},
 	Month = {March},
@@ -87,11 +103,18 @@
 	Type = {{JSR}},
 	Year = 2013}
 
-@techreport{jsonp,
-	Author = {Jitendra Kotamraju},
+@techreport{jsr374,
+	Author = {Kin-Man Chung},
 	Institution = {JCP},
-	Month = {March},
-	Note = {See http://jcp.org/en/jsr/detail?id=353},
+	Note = {See http://jcp.org/en/jsr/detail?id=374},
 	Title = {{Java} {API} {for} {JSON} {Processing}},
 	Type = {{JSR}},
-	Year = 2013}
+	Year = 2015}
+	
+@techreport{jsr370,
+	Author = {Santiago Pericas-Geertsen, Marek Potociar},
+	Institution = {JCP},
+	Note = {See http://jcp.org/en/jsr/detail?id=370},
+	Title = {{Java} {API} {for} {RESTful} {Web} {Services}},
+	Type = {{JSR}},
+	Year = 2015}
