Dates section added.

--- a/spec/references.bib
+++ b/spec/references.bib
@@ -4,6 +4,15 @@
 %% Created for Martin Grebac at 2014-11-11 19:05:26 +0100 
 %% Saved with string encoding Unicode (UTF-8) 
 
+@techreport{rfc1123,
+	Annote = {http://tools.ietf.org/html/rfc1123},
+	Author = {Robert Braden},
+	Institution = {IETF},
+	Month = {October},
+	Title = {Requirements for Internet Hosts, Application and Support},
+	Type = {{RFC}},
+	Year = {1989}}
+
 @techreport{rfc2119,
 	Annote = {http://tools.ietf.org/html/rfc2119},
 	Author = {Scott Bradner},
