Generics section added.
Signed-off-by: Martin Vojtek <martin.vojtek@oracle.com>

--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -12,6 +12,7 @@
 \SetWatermarkColor[gray]{0.90}
 \usepackage{amssymb}
 \usepackage{float}
+\usepackage{amsmath}
 
 \setlength{\emergencystretch}{3em}
 
