--- a/spec/spec.tex
+++ b/spec/spec.tex
@@ -7,7 +7,7 @@
 \usepackage{tabularx}
 \usepackage{moreverb}
 \usepackage{draftwatermark}
-\SetWatermarkText{DRAFT}
+\SetWatermarkText{}
 \SetWatermarkScale{1.2}
 \SetWatermarkColor[gray]{0.90}
 \usepackage{amssymb}
